--- a/css/style.css
+++ b/css/style.css
@@ -17,25 +17,21 @@ body {
 }
 
 /* استایل برای هدر */
-header {
+.header, .header h1 {
     background-color: var(--primary-color);
     color: white;
     padding: 1rem;
     text-align: center;
 }
 
-header h1 {
-    margin: 0;
-}
-
-header nav {
+.header nav {
     margin-top: 1rem;
     display: flex;
     justify-content: center;
     gap: 1rem;
 }
 
-header nav input[type="text"] {
+.header nav input[type="text"] {
     padding: 0.5rem;
     border: 1px solid var(--form-border-color);
     border-radius: 5px;
@@ -43,7 +39,7 @@ header nav input[type="text"] {
     max-width: 300px;
 }
 
-header nav button {
+.header nav button {
     background-color: var(--primary-color);
     color: white;
     padding: 0.5rem 1rem;
@@ -53,7 +49,7 @@ header nav button {
     transition: background-color 0.3s;
 }
 
-header nav button:hover {
+.header nav button:hover {
     background-color: var(--primary-hover-color);
 }
 
