--- a/css/style.css
+++ b/css/style.css
@@ -17,21 +17,25 @@ body {
 }
 
 /* استایل برای هدر */
-.header, .header h1 {
+header {
     background-color: var(--primary-color);
     color: white;
     padding: 1rem;
     text-align: center;
 }
 
-.header nav {
+header .logo h1 {
+    margin: 0;
+}
+
+header nav {
     margin-top: 1rem;
     display: flex;
     justify-content: center;
     gap: 1rem;
 }
 
-.header nav input[type="text"] {
+header nav input[type="text"] {
     padding: 0.5rem;
     border: 1px solid var(--form-border-color);
     border-radius: 5px;
@@ -39,7 +43,7 @@ body {
     max-width: 300px;
 }
 
-.header nav button {
+header nav button {
     background-color: var(--primary-color);
     color: white;
     padding: 0.5rem 1rem;
@@ -49,7 +53,7 @@ body {
     transition: background-color 0.3s;
 }
 
-.header nav button:hover {
+header nav button:hover {
     background-color: var(--primary-hover-color);
 }
 
@@ -72,46 +76,6 @@ body {
 }
 
 .categories a:hover {
-    background-color: var(--primary-hover-color);
-}
-
-/* استایل برای فرم‌ها */
-form {
-    max-width: 400px;
-    margin: 2rem auto;
-    background: white;
-    padding: 1rem;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-form label {
-    display: block;
-    margin-bottom: 0.5rem;
-}
-
-form input,
-form textarea,
-form select {
-    width: 100%;
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    border: 1px solid var(--form-border-color);
-    border-radius: 5px;
-}
-
-form button {
-    display: block;
-    width: 100%;
-    padding: 0.5rem;
-    background-color: var(--primary-color);
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-form button:hover {
     background-color: var(--primary-hover-color);
 }
 
